--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "streamin",
-  "description": "Provide a better streaming api in your app.",
+  "description": "Provide a better streaming api for your module.",
   "keywords": ["stream", "input", "output", "file", "request", "path", "url"],
   "version": "0.1.2",
   "repository": {
