--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "filed": "~0.1.0",
-    "request": "~2.34.0",
+    "request": "^2.34.0",
     "streamify": "~0.2.3"
   },
   "devDependencies": {
